--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -107,8 +107,8 @@
 
             <tech.hombre.freelancehunt.common.widgets.CustomImageView
                 android:id="@+id/avatar"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:layout_marginTop="@dimen/padding_middle"
                 app:layout_constraintStart_toStartOf="@id/description"
                 app:layout_constraintTop_toBottomOf="@id/description"
@@ -116,7 +116,7 @@
 
             <TextView
                 android:id="@+id/login"
-                style="@style/TextStyle.Caption"
+                style="@style/TextStyle.Heading"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
