--- a/app/src/main/res/layout/fragment_pager_freelancer_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_freelancer_overview.xml
@@ -247,9 +247,9 @@
                         app:layout_constraintEnd_toEndOf="@+id/summaryTitle"
                         app:layout_constraintStart_toStartOf="@+id/summaryTitle" />
 
-                    <TextView
+                    <org.sufficientlysecure.htmltextview.HtmlTextView
                         android:id="@+id/summary"
-                        style="@style/TextStyle.Title"
+                        style="@style/TextStyle.Title.Sub"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/padding_middle"
