--- a/app/src/main/res/layout/fragment_pager_project_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_project_overview.xml
@@ -10,7 +10,7 @@
     android:paddingEnd="@dimen/padding_middle"
     android:paddingBottom="@dimen/padding_standart">
 
-    <TextView
+    <org.sufficientlysecure.htmltextview.HtmlTextView
         android:id="@+id/description"
         style="@style/TextStyle.Title"
         android:layout_width="0dp"
