--- a/app/src/main/res/layout/item_employers_list.xml
+++ b/app/src/main/res/layout/item_employers_list.xml
@@ -184,7 +184,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginTop="@dimen/padding_middle"
                 android:background="@drawable/back_safe"
                 android:drawableStart="@drawable/place"
                 android:drawablePadding="@dimen/padding_small"
