--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -29,28 +29,34 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
-                android:layout_marginTop="@dimen/padding_middle"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:ellipsize="end"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/flow"
                 tools:text="Looking for Full stack developer" />
 
             <androidx.constraintlayout.helper.widget.Flow
                 android:id="@+id/flow"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_small"
-                app:constraint_referenced_ids="premium,safe,isremote"
+                android:layout_marginTop="@dimen/padding_middle"
+                app:constraint_referenced_ids="isplus,premium,isremote,safe"
                 app:flow_horizontalBias="0"
                 app:flow_horizontalGap="@dimen/padding_small"
                 app:flow_horizontalStyle="packed"
-                app:flow_verticalBias="0"
                 app:flow_wrapMode="chain"
                 app:layout_constraintEnd_toEndOf="@id/name"
                 app:layout_constraintStart_toStartOf="@id/name"
-                app:layout_constraintTop_toBottomOf="@id/name" />
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/isplus"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:visibility="gone"
+                app:srcCompat="@drawable/plus"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/premium"
@@ -99,10 +105,9 @@
                 android:layout_marginTop="@dimen/padding_middle"
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:layout_marginBottom="@dimen/padding_middle"
-                android:autoLink="all"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/name"
-                app:layout_constraintTop_toBottomOf="@id/flow"
+                app:layout_constraintTop_toBottomOf="@id/name"
                 tools:text="Backend must be PHP like Yii or Laravel." />
 
             <tech.hombre.freelancehunt.common.widgets.CustomImageView
@@ -123,7 +128,6 @@
                 android:layout_marginEnd="@dimen/padding_middle"
                 android:ellipsize="end"
                 app:layout_constraintBottom_toBottomOf="@id/avatar"
-                app:layout_constraintEnd_toStartOf="@id/isplus"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@id/avatar"
                 app:layout_constraintTop_toTopOf="@id/avatar"
@@ -145,19 +149,20 @@
                 tools:text="0" />
 
             <TextView
-                android:id="@+id/isplus"
-                style="@style/TextStyle.Type"
+                android:id="@+id/budget"
+                app:layout_constraintEnd_toStartOf="@id/bidCount"
+                style="@style/TextStyle.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_small"
-                android:drawableStart="@drawable/plus"
+                android:layout_marginEnd="@dimen/padding_middle"
+                android:drawableStart="@drawable/purse"
                 android:drawablePadding="@dimen/padding_small"
                 android:gravity="center"
-                android:text="@string/for_plus"
-                android:textColor="?textColorSecondary"
-                app:layout_constraintBottom_toBottomOf="@id/bidCount"
-                app:layout_constraintEnd_toStartOf="@id/bidCount"
-                app:layout_constraintTop_toTopOf="@id/bidCount" />
+                app:layout_constraintBottom_toBottomOf="@id/login"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toTopOf="@id/login"
+                tools:text="8 500 ₴" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
