[*] feed cache [*] ui

--- a/app/src/main/res/layout/activity_contest_detail.xml
+++ b/app/src/main/res/layout/activity_contest_detail.xml
@@ -17,16 +17,15 @@
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/contestActivityContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/reviewView"
@@ -165,13 +164,10 @@
 
                 </LinearLayout>
 
+                </LinearLayout>
+
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-
-
     </androidx.core.widget.NestedScrollView>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
