[+] project, freelancer, employer contest hot show [*] endlesscroll [*] safe type title

--- a/app/src/main/res/layout/item_employers_list.xml
+++ b/app/src/main/res/layout/item_employers_list.xml
@@ -41,6 +41,7 @@
                 app:layout_constraintTop_toTopOf="@id/serviceOn" />
 
             <TextView
+                android:elevation="8dp"
                 android:id="@+id/rating"
                 style="@style/TextStyle.Rating"
                 android:layout_width="wrap_content"
@@ -57,7 +58,6 @@
                 style="@style/TextStyle.Vote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_small"
                 android:drawableStart="@drawable/thumb_up"
                 android:drawablePadding="@dimen/padding_small"
                 android:ellipsize="end"
@@ -70,9 +70,9 @@
                 style="@style/TextStyle.Vote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/padding_middle"
                 android:drawableStart="@drawable/thumb_down"
                 android:drawablePadding="@dimen/padding_small"
+                android:paddingEnd="@dimen/padding_small"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:textColor="?textColorSecondary"
