--- a/app/src/main/res/layout/item_feed_list.xml
+++ b/app/src/main/res/layout/item_feed_list.xml
@@ -30,7 +30,7 @@
                 android:paddingBottom="@dimen/padding_middle"
                 app:constraint_referenced_ids="avatar,login,isplus"
                 app:flow_horizontalBias="0"
-                app:flow_horizontalGap="@dimen/padding_small"
+                app:flow_horizontalGap="@dimen/padding_middle"
                 app:flow_horizontalStyle="packed"
                 app:flow_verticalBias="0"
                 app:flow_wrapMode="chain"
