--- a/app/src/main/res/layout/item_project_bids_list.xml
+++ b/app/src/main/res/layout/item_project_bids_list.xml
@@ -152,6 +152,21 @@
                 tools:text="0" />
 
             <TextView
+                android:id="@+id/safe"
+                style="@style/TextStyle.Type.Bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/back_safe"
+                android:layout_marginTop="@dimen/padding_middle"
+                android:drawableStart="@drawable/safe"
+                android:drawablePadding="@dimen/padding_small"
+                app:layout_constraintStart_toStartOf="@id/flowlogin"
+                android:text="@string/safe"
+                android:textColor="?textColorPrimary"
+                app:layout_constraintTop_toBottomOf="@id/flowlogin"
+                />
+
+            <TextView
                 android:id="@+id/comment"
                 style="@style/TextStyle.Title"
                 android:layout_width="0dp"
@@ -161,7 +176,7 @@
                 android:autoLink="all"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/avatar"
-                app:layout_constraintTop_toBottomOf="@id/flowlogin"
+                app:layout_constraintTop_toBottomOf="@id/safe"
                 tools:text="Choose me and we can fix it!" />
 
             <androidx.constraintlayout.helper.widget.Flow
@@ -176,7 +191,7 @@
                 app:flow_horizontalStyle="packed"
                 app:flow_verticalBias="0"
                 app:flow_wrapMode="chain"
-                app:layout_constraintEnd_toStartOf="@id/voteup"
+                app:layout_constraintEnd_toStartOf="@id/isWinner"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/comment" />
 
