--- a/app/src/main/res/layout/item_feed_list.xml
+++ b/app/src/main/res/layout/item_feed_list.xml
@@ -49,7 +49,7 @@
 
             <TextView
                 android:id="@+id/login"
-                style="@style/TextStyle.Heading"
+                style="@style/TextStyle.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
@@ -99,7 +99,7 @@
 
             <TextView
                 android:id="@+id/message"
-                style="@style/TextStyle.Title"
+                style="@style/TextStyle.Heading"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_middle"
@@ -109,7 +109,7 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/flow"
                 app:layout_constraintTop_toBottomOf="@id/type"
-                tools:text="Добавил проект Мобильное приложение на основе каршеринга" />
+                tools:text="Мобильное приложение на основе каршеринга" />
 
             <TextView
                 android:id="@+id/createdAt"
