--- a/app/src/main/res/layout/item_project_list.xml
+++ b/app/src/main/res/layout/item_project_list.xml
@@ -120,7 +120,7 @@
 
             <TextView
                 android:id="@+id/login"
-                style="@style/TextStyle.Heading"
+                style="@style/TextStyle.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_middle"
