--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -33,7 +33,7 @@
         android:gravity="center_horizontal"
         app:layout_constraintTop_toBottomOf="@id/name"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="@dimen/padding_middle"
+        android:layout_marginBottom="@dimen/padding_standart"
         tools:text="Фрилансер" />
 
     <TextView
