--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -10,8 +10,8 @@
 
     <tech.hombre.freelancehunt.common.widgets.CustomImageView
         android:id="@+id/avatar"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:layout_marginTop="@dimen/padding_standart"
         android:scaleType="centerCrop"
         android:elevation="7dp"
@@ -38,7 +38,7 @@
 
     <TextView
         android:id="@+id/name"
-        style="@style/TextStyle.Heading"
+        style="@style/TextStyle.Heading.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_middle"
