--- a/app/src/main/res/layout/item_thread_message.xml
+++ b/app/src/main/res/layout/item_thread_message.xml
@@ -25,7 +25,7 @@
         android:paddingEnd="@dimen/padding_small"
         android:paddingBottom="7dp">
 
-        <TextView
+        <org.sufficientlysecure.htmltextview.HtmlTextView
             android:id="@+id/text"
             style="@style/TextStyle.Chat.Text"
             android:layout_width="wrap_content"
