--- a/app/src/main/res/layout/item_menu_threads.xml
+++ b/app/src/main/res/layout/item_menu_threads.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/padding_middle"
-    android:paddingBottom="@dimen/padding_middle">
+    android:paddingBottom="@dimen/padding_small">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icon"
