--- a/app/src/main/res/layout/fragment_pager_freelancer_overview.xml
+++ b/app/src/main/res/layout/fragment_pager_freelancer_overview.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.core.widget.NestedScrollView
         android:fillViewport="true"
@@ -226,7 +227,6 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/padding_middle">
 
-
                     <TextView
                         android:id="@+id/summaryTitle"
                         style="@style/TextStyle.Divider"
@@ -247,7 +247,7 @@
 
                     <org.sufficientlysecure.htmltextview.HtmlTextView
                         android:id="@+id/summary"
-                        style="@style/TextStyle.Title.Sub"
+                        style="@style/TextStyle.Title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/padding_middle"
@@ -292,13 +292,14 @@
                         app:layout_constraintStart_toStartOf="@+id/skillsTitle" />
 
 
-                    <TextView
-                        android:id="@+id/skills"
-                        style="@style/TextStyle.Title"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/skillList"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/padding_middle"
                         android:padding="@dimen/padding_middle"
+                        tools:itemCount="5"
+                        tools:listitem="@layout/item_skill_list"
                         app:layout_constraintTop_toBottomOf="@id/skillsTitle" />
 
 
