--- a/app/src/main/res/layout/item_project_comments_list.xml
+++ b/app/src/main/res/layout/item_project_comments_list.xml
@@ -70,6 +70,22 @@
                 app:layout_constraintTop_toBottomOf="@id/avatar"
                 tools:text="Please, add some information to project description." />
 
+            <TextView
+                android:id="@+id/like"
+                style="@style/TextStyle.Type.Bold"
+                android:layout_marginEnd="@dimen/padding_middle"
+                android:layout_marginTop="@dimen/padding_small"
+                android:gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="@dimen/padding_small"
+                android:drawableStart="@drawable/type_like"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/comment"
+                android:visibility="gone"
+                tools:visibility="visible"
+                tools:text="1" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
