[+] notifications [*] restore api after crash parent activity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,14 +59,15 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/token"
+                    android:elevation="4dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/padding_middle"
-                    android:layout_marginEnd="@dimen/padding_middle"
-                    android:padding="@dimen/padding_middle"
+                    android:layout_height="44dp"
+                    android:layout_marginStart="@dimen/padding_standart"
+                    android:layout_marginEnd="@dimen/padding_standart"
+                    android:translationZ="8dp"
                     android:background="@drawable/bottom_border_shadow"
                     android:ellipsize="end"
-                    android:gravity="center_horizontal"
+                    android:gravity="center"
                     android:hint="@string/token_hint"
                     android:inputType="text"
                     android:maxLines="1"
