--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -51,7 +51,7 @@
         android:checkableBehavior="none">
 
         <item
-            android:id="@+id/drawer_item_settings"
+            android:id="@+id/menu_settings"
             android:icon="@drawable/settings"
             android:title="@string/settings" />
         <item
